examples/errors/overlap-terms.sem
meta overlap = Syntax
meta overlap = Bool

